force-app/main/default/objects/vlocity_cmt__GraphCloneSpecial__c/fields/vlocity_cmt__ChildObject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ChildObject__c</fullName>
    <description>Child object(s) being cloned.</description>
    <label>Child Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>