force-app/main/default/objects/vlocity_cmt__GraphCloneSpecial__c/fields/vlocity_cmt__Order__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Order__c</fullName>
    <description>Sequence of operation if there are multiple special pieces of code to run for the same Root / Child combination.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>