force-app/main/default/objects/vlocity_cmt__GraphCloneSpecial__c/fields/vlocity_cmt__RootObject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__RootObject__c</fullName>
    <description>The parent object type that is being cloned</description>
    <label>Root Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>